feat: spark streaming reads kafka